; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_inet_pton.c_Curl_inet_pton.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_inet_pton.c_Curl_inet_pton.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EAFNOSUPPORT = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_inet_pton(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %13 [
    i32 129, label %9
  ]

9:                                                ; preds = %3
  %10 = load i8*, i8** %6, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = call i32 @inet_pton4(i8* %10, i8* %11)
  store i32 %12, i32* %4, align 4
  br label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @EAFNOSUPPORT, align 4
  store i32 %14, i32* @errno, align 4
  store i32 -1, i32* %4, align 4
  br label %15

15:                                               ; preds = %13, %9
  %16 = load i32, i32* %4, align 4
  ret i32 %16
}

declare dso_local i32 @inet_pton4(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
